UI: Fix navbar dropdown menu alignment
The images used in navbar were too big to fit what added extra pixels
bellow the navbar menu making the dropdowns misaligned.

See #4659

--- a/weblate/static/style-bootstrap.css
+++ b/weblate/static/style-bootstrap.css
@@ -14,11 +14,6 @@
   height: 32px;
 }
 
-.avatar.w24 {
-  width: 24px;
-  height: 24px;
-}
-
 .user-list {
   display: flex;
   flex-wrap: wrap;
@@ -989,6 +984,11 @@ thead th {
 
 .navbar a path {
   fill: #bfc3c7;
+}
+.navbar-nav svg,
+.navbar-nav img.avatar {
+  width: 20px;
+  height: 20px;
 }
 
 .navbar .navbar-brand:focus path,
